--- a/server/admin.html
+++ b/server/admin.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <link href="./public/tailwind.css" rel="stylesheet" />
+        <link href="./public/output.css" rel="stylesheet" />
         <link href="./public/style.css" rel="stylesheet" />
         <title>bot dashboard</title>
         <script>
